kubernetes-networks/kubernetes-dashboard-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard
  labels:
    run: kubernetes-dashboard
  namespace: kube-system
spec:
  type: LoadBalancer
  ports:
  - port: 443
    targetPort: 8443
    protocol: TCP
  selector:
    k8s-app: kubernetes-dashboard
